MozReview: Add line wrapping to review request description (Bug 1330674). r=smacleod
MozReview-Commit-ID: GzKQu2iKFjT

--- a/pylib/mozreview/mozreview/static/mozreview/css/mozilla-theme-reviews.less
+++ b/pylib/mozreview/mozreview/static/mozreview/css/mozilla-theme-reviews.less
@@ -50,6 +50,7 @@
     font-family: inherit;
     color: inherit;
     text-align: left;
+    white-space: pre-wrap;
   }
 
   .status {
